# microstudioX

./: .gitattributes  CNAME  README.md  index.html  microstudioX.cabal  package.yaml  site.hs  stack.yaml  terms.html  test.html
.github/workflows/: deploy.yml
app/DSG01/: info.txt
app/UI/: components.txt
app/VLZ01/: viulenza.txt
app/XSOPS/: info.txt
core/: UI.hs
core/Interop/: CKernel.hs
src/: index.html
src/Core/: Models.hs  Units.hs
src/core/: calc.hs  trace.hs
